--- a/main.css
+++ b/main.css
@@ -1,11 +1,9 @@
-
-
 body {
     --color-primary: #009579;
-    --color-primary--dark: #007f67;
-    --color-secondary:#252c6a;
-    --color-error:#cc3333;
-    --color-success:#4bb544;
+    --color-primary-dark: #007f67;
+    --color-secondary: #252c6a;
+    --color-error: #cc3333;
+    --color-success: #4bb544;
     --border-radius: 4px;
 
     margin: 0;
@@ -14,20 +12,8 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    background: var(--color-primary);
-    background-size: cover;
+}
 
-    
-}
-.container{
-    width: 400px;
-    max-width: 400px;
-    margin: 1rem;
-    padding: 2rem;
-    box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
-    border-radius: var (--border-radius);
-    background: #ffffff;
-}
 .container {
     width: 400px;
     max-width: 400px;
@@ -58,7 +44,7 @@ body {
 
 .form__title {
     margin-bottom: 2rem;
-   text-align: center;
+    text-align: center;
 }
 
 .form__message {
@@ -77,6 +63,7 @@ body {
 .form__input-group {
     margin-bottom: 1rem;
 }
+
 .form__input{
     display: block;
     width: 100%;
@@ -85,4 +72,55 @@ body {
     border-radius: varr(--border-radius);
     border: 1px solid #eeeeee;
     transition: background 0.2s, border-color 0.2s;
+}
+
+.form__input:focus {
+    border-color: var(--color-primary);
+    background: #ffffff;
+}
+
+.form__input--error {
+    color: var(--color-error);
+    border-color: var(--color-error);
+}
+
+.form__input-error-message {
+    margin-top: 0.5rem;
+    font-size: 0.85rem;
+    color: var(--color-error);
+}
+
+.form__button {
+    width: 100%;
+    padding: 1rem 2rem;
+    font-weight: bold;
+    font-size: 1.1rem;
+    color: #ffffff;
+    border: none;
+    border-radius: var(--border-radius);
+    outline: none;
+    cursor: pointer;
+    background: var(--color-primary);
+}
+
+.form__button:hover {
+    background: var(--color-primary-dark);
+}
+
+.form__button:active {
+    transform: scale(0.98);
+}
+
+.form__text {
+    text-align: center;
+}
+
+.form__link {
+    color: var(--color-secondary);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.form__link:hover {
+    text-decoration: underline;
 }
