--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
-    --color-primary: #009579;
-    --color-primary-dark: #007f67;
+    --color-primary: #ef3800;
+    --color-primary-dark: #bf2d00;
     --color-secondary: #252c6a;
     --color-error: #cc3333;
     --color-success: #4bb544;
@@ -69,7 +69,7 @@ body {
     width: 100%;
     padding: 0.75rem;
     box-sizing: border-box;
-    border-radius: varr(--border-radius);
+    border-radius: var(--border-radius);
     border: 1px solid #eeeeee;
     transition: background 0.2s, border-color 0.2s;
 }
