--- a/contactPage.css
+++ b/contactPage.css
@@ -15,6 +15,8 @@ body {
 }
 
 .container {
+  width: 90%;
+  max-width: 800px;
   margin: 1rem;
   padding: 2rem;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
