--- a/contactPage.css
+++ b/contactPage.css
@@ -37,7 +37,7 @@ font: 500 1rem 'Quicksand', sans-serif;
   {
     margin-top: 2rem;
   }
-
+}
 .form__title {
   margin-bottom: 2rem;
   text-align: center;
