--- a/contactPage.css
+++ b/contactPage.css
@@ -24,7 +24,21 @@ body {
   background: #ffffff;
 font: 500 1rem 'Quicksand', sans-serif;
 }
-
+@media screen and (max-width: 480px){
+  .wrapper
+  {
+    display:flex;
+    flex-direction: column;
+    align-items: center; 
+  }
+}
+@media screen and (max-width: 480){
+  #contactDetails
+  {
+    margin-top: 2rem;
+    
+  }
+}
 .form__title {
   margin-bottom: 2rem;
   text-align: center;
