making containers smaller to fit mobile device

--- a/contactPage.css
+++ b/contactPage.css
@@ -16,7 +16,7 @@ body {
 
 .container {
   width: 90%;
-  max-width: 800px;
+  max-width: 240;
   margin: 1rem;
   padding: 2rem;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
