--- a/contactPage.css
+++ b/contactPage.css
@@ -16,7 +16,7 @@
 
   .container {
     width: 90%;
-    max-width: 240px;
+    max-width: 400;
     margin: 1rem;
     padding: 2rem;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
@@ -25,7 +25,7 @@
   font: 500 1rem 'Quicksand', sans-serif;
   }
   #contactDetails{
-    width: 240px;
+    width: 100;
   }
   @media screen and (max-width: 480px){
     .wrapper
