--- a/contactPage.css
+++ b/contactPage.css
@@ -25,7 +25,7 @@
   font: 500 1rem 'Quicksand', sans-serif;
   }
   #contactDetails{
-    width: 100;
+    width: 100px;
   }
   @media screen and (max-width: 480px){
     .wrapper
