--- a/contactPage.css
+++ b/contactPage.css
@@ -16,7 +16,7 @@
 
   .container {
     width: 90%;
-    max-width: 400;
+    max-width: 400px;
     margin: 1rem;
     padding: 2rem;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
