--- a/contactPage.css
+++ b/contactPage.css
@@ -15,7 +15,7 @@
   }
 
   .container {
-    width: 40%;
+    width: 450px;
     margin: 1rem;
     padding: 2rem;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
@@ -23,7 +23,9 @@
     background: #ffffff;
   font: 500 1rem 'Quicksand', sans-serif;
   }
-
+  #contactDetails{
+    width: 400px;
+  }
   @media screen and (max-width: 480px){
     .wrapper
     {
