--- a/contactPage.css
+++ b/contactPage.css
@@ -48,9 +48,11 @@ font: 500 1rem 'Quicksand', sans-serif;
   }
 }
 
-#contactDetails
-{
-  justify-content: right;
+.addinfo {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 1rem;
 }
 
 .form__title {
