--- a/contactPage.css
+++ b/contactPage.css
@@ -24,13 +24,17 @@ body {
   background: #ffffff;
 font: 500 1rem 'Quicksand', sans-serif;
 }
+
+.wrapper {
+	margin: 1rem;
+}
+
 @media screen and (max-width: 480px){
-  .wrapper
-  {
-    display:flex;
-    flex-direction: column;
-    align-items: center; 
-  }
+	.wrapper {
+		display:flex;
+		flex-direction: column;
+		align-items: center; 
+	}
 }
 @media screen and (max-width: 480){
   #container
@@ -215,10 +219,16 @@ td, th {
 	padding: 5px;
 }
 
+#addContactForm {
+	display: table;
+}
+
 #addContactForm label, input {
 	display: table-cell;
 }
 
-#addContactForm p {
+#addContactForm div {
 	display: table-row;
 }
+
+
