--- a/contactPage.css
+++ b/contactPage.css
@@ -235,7 +235,7 @@ td, th {
 	display: table-row;
 }
 
-#addContactForm input, #contactDetailsForm input{
+#contactDetailsForm input:disabled{
 	border: 1 !important;
 	box-shadow: none !important;
 	background-color: white !important;
