--- a/contactPage.css
+++ b/contactPage.css
@@ -257,7 +257,9 @@ td, th {
 @media screen and (max-width: 912px)
 {
   #contactDetails {
-    position: relative;
+    position: absolute;
+    top: 100%;
+    left: 0;
   }
 }
 
@@ -266,5 +268,7 @@ td, th {
   #addContactDetails {
     position: absolute;
     top: 100%;
+    left: 0;
   }
 }
+
