--- a/contactPage.css
+++ b/contactPage.css
@@ -112,6 +112,8 @@ font: 500 1rem 'Quicksand', sans-serif;
 table {
   border-collapse: collapse;
   width: 100%;
+  height: 300px;
+  overflow-y: scroll;
   border: 1px black solid;
   margin-bottom:10px;
 }
