--- a/contactPage.css
+++ b/contactPage.css
@@ -116,8 +116,7 @@ table {
   margin-bottom:10px;
 }
 
-table tbody { height:300px; overflow-y:scroll; display:block; }
-table thead { display:block; }
+table tbody { height:300px; overflow-y:scroll;	}
 
 tr:first-child{
   background-color: #19c5e6;
