--- a/contactPage.css
+++ b/contactPage.css
@@ -116,8 +116,8 @@ table {
   margin-bottom:10px;
 }
 
-table tbody { height:300px; overflow-y:scroll;}
-table thead { display:block; }
+table tbody { overflow-y: scroll; width: 100%; }
+table thead { display:block;}
 
 tr:first-child{
   background-color: #19c5e6;
@@ -275,3 +275,6 @@ td, th {
   }
 }
 
+#contactTable {
+	max-height: 300px;
+}
